src/br/unicamp/ic/lis/cdms/queryproc/parser/betaParser.java
// Generated from /home/luizcelso/workspace/CDMS2/src/br/unicamp/ic/lis/cdms/queryproc/parser/beta.g4 by ANTLR 4.5
package br.unicamp.ic.lis.cdms.queryproc.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class betaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, CAST_FLOAT=15, CAST_INTEGER=16, 
		AND=17, OR=18, VTABLE=19, ETABLE=20, NEW=21, CURRENT=22, IN=23, OUT=24, 
		BOTH=25, MIN=26, MAX=27, SUM=28, TABLE_ID=29, IDENTIFIER=30, QUALIFIED_ID=31, 
		NEWLINE=32, INT=33, FLOAT=34, STRING=35, SINGLE_LINE_COMMENT=36, WS=37, 
		MUL=38, DIV=39, ADD=40, SUB=41, EQ=42, GT=43, ST=44;
	public static final int
		RULE_query = 0, RULE_assign_expr = 1, RULE_return_expr = 2, RULE_operation = 3, 
		RULE_select = 4, RULE_project = 5, RULE_sscan = 6, RULE_beta = 7, RULE_table_ref = 8, 
		RULE_list_labels = 9, RULE_bool_exp = 10, RULE_col_test = 11, RULE_assig_expr = 12, 
		RULE_assig_aggr = 13, RULE_update_expr = 14, RULE_expr = 15, RULE_value = 16, 
		RULE_list_identifiers = 17;
	public static final String[] ruleNames = {
		"query", "assign_expr", "return_expr", "operation", "select", "project", 
		"sscan", "beta", "table_ref", "list_labels", "bool_exp", "col_test", "assig_expr", 
		"assig_aggr", "update_expr", "expr", "value", "list_identifiers"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':='", "'RETURN'", "'SELECT'", "'('", "','", "'{'", "'}'", "')'", 
		"'PROJECT'", "'['", "']'", "'SCAN'", "'BETA'", "'BY'", "'FLOAT'", "'INTEGER'", 
		"'AND'", "'OR'", "'V'", "'E'", "'newV'", "'current'", "'IN'", "'OUT'", 
		"'BOTH'", "'MIN'", "'MAX'", "'SUM'", null, null, null, null, null, null, 
		null, null, null, "'*'", "'/'", "'+'", "'-'", "'='", "'>'", "'<'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "CAST_FLOAT", "CAST_INTEGER", "AND", "OR", "VTABLE", 
		"ETABLE", "NEW", "CURRENT", "IN", "OUT", "BOTH", "MIN", "MAX", "SUM", 
		"TABLE_ID", "IDENTIFIER", "QUALIFIED_ID", "NEWLINE", "INT", "FLOAT", "STRING", 
		"SINGLE_LINE_COMMENT", "WS", "MUL", "DIV", "ADD", "SUB", "EQ", "GT", "ST"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "beta.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public betaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public Return_exprContext return_expr() {
			return getRuleContext(Return_exprContext.class,0);
		}
		public List<Assign_exprContext> assign_expr() {
			return getRuleContexts(Assign_exprContext.class);
		}
		public Assign_exprContext assign_expr(int i) {
			return getRuleContext(Assign_exprContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(betaParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(betaParser.NEWLINE, i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TABLE_ID) {
				{
				{
				setState(36); 
				assign_expr();
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(37); 
					match(NEWLINE);
					}
					}
					setState(42);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48); 
			return_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_exprContext extends ParserRuleContext {
		public TerminalNode TABLE_ID() { return getToken(betaParser.TABLE_ID, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public Assign_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterAssign_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitAssign_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitAssign_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_exprContext assign_expr() throws RecognitionException {
		Assign_exprContext _localctx = new Assign_exprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assign_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			match(TABLE_ID);
			setState(51); 
			match(T__0);
			setState(52); 
			operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_exprContext extends ParserRuleContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public Return_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterReturn_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitReturn_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitReturn_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_exprContext return_expr() throws RecognitionException {
		Return_exprContext _localctx = new Return_exprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_return_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); 
			match(T__1);
			setState(55); 
			operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public SscanContext sscan() {
			return getRuleContext(SscanContext.class,0);
		}
		public ProjectContext project() {
			return getRuleContext(ProjectContext.class,0);
		}
		public BetaContext beta() {
			return getRuleContext(BetaContext.class,0);
		}
		public Table_refContext table_ref() {
			return getRuleContext(Table_refContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operation);
		try {
			setState(62);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(57); 
				select();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(58); 
				sscan();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(59); 
				project();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(60); 
				beta();
				}
				break;
			case TABLE_ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(61); 
				table_ref();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public TerminalNode TABLE_ID() { return getToken(betaParser.TABLE_ID, 0); }
		public Bool_expContext bool_exp() {
			return getRuleContext(Bool_expContext.class,0);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitSelect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); 
			match(T__2);
			setState(65); 
			match(T__3);
			setState(66); 
			match(TABLE_ID);
			setState(67); 
			match(T__4);
			setState(68); 
			match(T__5);
			setState(70);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << IDENTIFIER) | (1L << QUALIFIED_ID) | (1L << INT) | (1L << STRING))) != 0)) {
				{
				setState(69); 
				bool_exp(0);
				}
			}

			setState(72); 
			match(T__6);
			setState(73); 
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectContext extends ParserRuleContext {
		public TerminalNode TABLE_ID() { return getToken(betaParser.TABLE_ID, 0); }
		public List_labelsContext list_labels() {
			return getRuleContext(List_labelsContext.class,0);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitProject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitProject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_project);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			match(T__8);
			setState(76); 
			match(T__3);
			setState(77); 
			match(TABLE_ID);
			setState(78); 
			match(T__4);
			setState(79); 
			match(T__9);
			setState(80); 
			list_labels();
			setState(81); 
			match(T__10);
			setState(82); 
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SscanContext extends ParserRuleContext {
		public Token table;
		public TerminalNode VTABLE() { return getToken(betaParser.VTABLE, 0); }
		public TerminalNode ETABLE() { return getToken(betaParser.ETABLE, 0); }
		public Bool_expContext bool_exp() {
			return getRuleContext(Bool_expContext.class,0);
		}
		public SscanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sscan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterSscan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitSscan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitSscan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SscanContext sscan() throws RecognitionException {
		SscanContext _localctx = new SscanContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sscan);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); 
			match(T__11);
			setState(85); 
			match(T__3);
			setState(86);
			((SscanContext)_localctx).table = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==VTABLE || _la==ETABLE) ) {
				((SscanContext)_localctx).table = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(87); 
			match(T__4);
			setState(88); 
			match(T__5);
			setState(90);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << IDENTIFIER) | (1L << QUALIFIED_ID) | (1L << INT) | (1L << STRING))) != 0)) {
				{
				setState(89); 
				bool_exp(0);
				}
			}

			setState(92); 
			match(T__6);
			setState(93); 
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BetaContext extends ParserRuleContext {
		public Token r;
		public Token v;
		public Token e;
		public Token n;
		public Token dir;
		public List_labelsContext follow;
		public Assig_exprContext set;
		public Assig_exprContext map;
		public Assig_aggrContext reduce;
		public Assig_exprContext update;
		public List<TerminalNode> TABLE_ID() { return getTokens(betaParser.TABLE_ID); }
		public TerminalNode TABLE_ID(int i) {
			return getToken(betaParser.TABLE_ID, i);
		}
		public TerminalNode INT() { return getToken(betaParser.INT, 0); }
		public List_labelsContext list_labels() {
			return getRuleContext(List_labelsContext.class,0);
		}
		public List<Assig_exprContext> assig_expr() {
			return getRuleContexts(Assig_exprContext.class);
		}
		public Assig_exprContext assig_expr(int i) {
			return getRuleContext(Assig_exprContext.class,i);
		}
		public Assig_aggrContext assig_aggr() {
			return getRuleContext(Assig_aggrContext.class,0);
		}
		public TerminalNode IN() { return getToken(betaParser.IN, 0); }
		public TerminalNode OUT() { return getToken(betaParser.OUT, 0); }
		public TerminalNode BOTH() { return getToken(betaParser.BOTH, 0); }
		public BetaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterBeta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitBeta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitBeta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BetaContext beta() throws RecognitionException {
		BetaContext _localctx = new BetaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_beta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); 
			match(T__12);
			setState(96); 
			match(T__3);
			setState(97); 
			((BetaContext)_localctx).r = match(TABLE_ID);
			setState(98); 
			match(T__4);
			setState(99); 
			((BetaContext)_localctx).v = match(TABLE_ID);
			setState(100); 
			match(T__4);
			setState(101); 
			((BetaContext)_localctx).e = match(TABLE_ID);
			setState(102); 
			match(T__4);
			setState(103); 
			((BetaContext)_localctx).n = match(INT);
			setState(104); 
			match(T__4);
			setState(105);
			((BetaContext)_localctx).dir = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IN) | (1L << OUT) | (1L << BOTH))) != 0)) ) {
				((BetaContext)_localctx).dir = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(106); 
			match(T__4);
			setState(107); 
			match(T__9);
			setState(108); 
			((BetaContext)_localctx).follow = list_labels();
			setState(109); 
			match(T__10);
			setState(110); 
			match(T__4);
			setState(111); 
			match(T__5);
			setState(112); 
			((BetaContext)_localctx).set = assig_expr();
			setState(113); 
			match(T__6);
			setState(114); 
			match(T__4);
			setState(115); 
			match(T__5);
			setState(116); 
			((BetaContext)_localctx).map = assig_expr();
			setState(117); 
			match(T__6);
			setState(118); 
			match(T__4);
			setState(119); 
			match(T__5);
			setState(120); 
			((BetaContext)_localctx).reduce = assig_aggr();
			setState(121); 
			match(T__6);
			setState(122); 
			match(T__4);
			setState(123); 
			match(T__5);
			setState(124); 
			((BetaContext)_localctx).update = assig_expr();
			setState(125); 
			match(T__6);
			setState(126); 
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_refContext extends ParserRuleContext {
		public TerminalNode TABLE_ID() { return getToken(betaParser.TABLE_ID, 0); }
		public Table_refContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_ref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterTable_ref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitTable_ref(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitTable_ref(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_refContext table_ref() throws RecognitionException {
		Table_refContext _localctx = new Table_refContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_table_ref);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); 
			match(TABLE_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_labelsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(betaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(betaParser.IDENTIFIER, i);
		}
		public List_labelsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_labels; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterList_labels(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitList_labels(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitList_labels(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_labelsContext list_labels() throws RecognitionException {
		List_labelsContext _localctx = new List_labelsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_list_labels);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130); 
					match(IDENTIFIER);
					setState(131); 
					match(T__4);
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(137); 
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_expContext extends ParserRuleContext {
		public Bool_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool_exp; }
	 
		public Bool_expContext() { }
		public void copyFrom(Bool_expContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndOrContext extends Bool_expContext {
		public Token logical;
		public List<Bool_expContext> bool_exp() {
			return getRuleContexts(Bool_expContext.class);
		}
		public Bool_expContext bool_exp(int i) {
			return getRuleContext(Bool_expContext.class,i);
		}
		public TerminalNode AND() { return getToken(betaParser.AND, 0); }
		public TerminalNode OR() { return getToken(betaParser.OR, 0); }
		public AndOrContext(Bool_expContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterAndOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitAndOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitAndOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensContext extends Bool_expContext {
		public Bool_expContext bool_exp() {
			return getRuleContext(Bool_expContext.class,0);
		}
		public ParensContext(Bool_expContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterParens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitParens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitParens(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ColTestContext extends Bool_expContext {
		public Col_testContext col_test() {
			return getRuleContext(Col_testContext.class,0);
		}
		public ColTestContext(Bool_expContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).enterColTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof betaListener ) ((betaListener)listener).exitColTest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof betaVisitor ) return ((betaVisitor<? extends T>)visitor).visitColTest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bool_expContext bool_exp() throws RecognitionException {
		return bool_exp(0);
	}

	private Bool_expContext bool_exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Bool_expContext _localctx = new Bool_expContext(_ctx, _parentState);
		Bool_expContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_bool_exp, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			switch (_input.LA(1)) {
			case IDENTIFIER:
			case QUALIFIED_ID:
			case INT:
			case STRING:
				{
				_localctx = new ColTestContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
